--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,25 @@ body {
 #container {
   width: 170px;
   margin: 0 auto;
+  color: #fff;
 }
 
 #board {
   background: #fff;
   padding: 10px;
   border-radius: 8px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.panel {
+  cursor: pointer;
+  background: #00aaff;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border-radius: 5px;
+  box-shadow: 0 4px 0 #0088cc;
+  line-height: 40px;
+  text-align: center;
 }
